Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/introduction.mdx
+++ b/Create-AI-Agent/introduction.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'Introduction'
-description: 'Step-by-step guide to creating an AI agent in Callin.io'
+title: "Introduction"
+description: "Example section for showcasing API endpoints"
 ---
 
-<Callout type="info">
-This guide explains how to create and configure an AI agent through the Callin.io interface.
-</Callout>
+<info>
+  This guide explains how to create and configure an AI agent through the Callin.io interface.
+</info>
 
 ## Step 1: Open the AI Agents module
 
@@ -60,4 +60,8 @@ You can personalize responses using the following variables:
 [company_name]     Your company name  
 [contact_name]     Name of the person being called  
 [email]            Email of the customer  
-[first_name]       First name of the customer  
+[first_name]       First name of the customer 
+[name]             Name of the Customer
+[product_name]     Name of the product
+[time_of_day]      Morning/Afternoon/Evening based on local time 
+```
