Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/introduction.mdx
+++ b/Create-AI-Agent/introduction.mdx
@@ -1,11 +1,7 @@
 ---
-title: "Introduction"
-description: "Example section for showcasing API endpoints"
+title: "How to Create Your AI Agent"
+description: "This guide walks you through the steps to create an AI agent in Callin.io, including all configurable options and features."
 ---
-
-<info>
-  This guide explains how to create and configure an AI agent through the Callin.io interface.
-</info>
 
 ## Step 1: Open the AI Agents module
 
