--- a/Create-AI-Agent/introduction.mdx
+++ b/Create-AI-Agent/introduction.mdx
@@ -7,6 +7,8 @@ description: "This guide walks you through the steps to create an AI agent in Ca
 
 From the left sidebar, click on **AI Agents** and then on the **Create Agent** button to begin.
 
+![AI Agent creation screen](../images/img%201.png)
+
 ## Step 2: Fill in basic information
 
 Complete the following fields:
