Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/introduction.mdx
+++ b/Create-AI-Agent/introduction.mdx
@@ -20,6 +20,8 @@ Complete the following fields:
 - **Maximum Call Duration (Minutes)**: Maximum length of each call.
 - **Language**: The primary language the agent will use.
 
+![Agent form - basic info](../images/img%202.png)
+
 ## Step 3: Choose a voice
 
 Select a voice from the list provided based on the selected language. You can click the play button to preview each voice.
