Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/introduction.mdx
+++ b/Create-AI-Agent/introduction.mdx
@@ -24,16 +24,26 @@ Complete the following fields:
 
 ## Step 3: Choose a voice
 
-Select a voice from the list provided based on the selected language. You can click the play button to preview each voice.
+In this step, you can select the voice your agent will use based on the previously selected language.
+
+Each voice includes a short description (e.g., “Friendly conversational voice”, “American accent”) and a preview button that allows you to listen before making your choice.
+
+Make sure to select a voice that fits the tone and purpose of your calls.
+
+![Voice selection screen](../images/img%203.png)
+
 
 ## Step 4: Advanced settings
 
-Optionally enable or configure:
+This section allows you to configure optional features that improve call control and customization:
 
-- **Machine Answering Detection**: Detects voicemail and auto-responders.
-- **Office Ambience Sound**: Adds background sound for a realistic experience.
-- **Retry Settings**: Define the retry interval (e.g., `0 - 30` seconds).
-- **Webhook URL**: URL to receive call event notifications (e.g., call results or transcripts).
+- **Machine Answering Detection**: Automatically detects voicemail and auto-responders.
+- **Office Ambience Sound**: Adds simulated background noise to make the agent sound like it's in a real office.
+- **Retry Settings**: Set the time interval between retries if a call is not answered (e.g., between 0 and 30 seconds).
+- **Webhook URL**: Enter a URL to receive real-time events such as call results or transcripts.
+
+![Advanced settings screen](../images/img%204.png)
+
 
 ## Step 5: Agent behavior and integrations
 
