Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,11 +1,21 @@
 ---
-title: "Introduction"
-description: "Welcome to the home of your new documentation"
+title: "Welcome"
+description: "Configuration center for your Callin.io platform"
 ---
 
-<div style={{ textAlign:"center",marginTop:"2rem" }}>
-# Welcome to the Callin.io Configuration Guide
+<div style={{ display: "flex", flexDirection: "column", justifyContent: "center", alignItems: "center", paddingTop: "4rem", textAlign: "center", minHeight: "70vh" }}>
 
-This is the official guide to configure your AI agents, numbers, and key settings.
+# Welcome to Callin.io
+
+This is your **configuration center** for managing your AI calling platform.
+
+Explore the sections from the left sidebar to:
+
+- Set up and customize your **AI agents**
+- Configure **virtual numbers** for your campaigns
+- Connect with analytics and integrations
+- Fine-tune behavior, voices, and variables
+
+Everything you need to launch and scale with Callin.io — in one place.
 
 </div>
