Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,10 +1,8 @@
 ---
-title: "Welcome"
-description: "Configuration center for your Callin.io platform"
+mode: "custom"
 ---
 
-<div style={{ display: "flex", flexDirection: "column", justifyContent: "center", alignItems: "center", paddingTop: "4rem", textAlign: "center", minHeight: "70vh" }}>
-
+<div style={{ display:"flex",flexDirection:"column",justifyContent:"center",alignItems:"center",paddingTop:"4rem",textAlign:"center",minHeight:"70vh" }}>
 # Welcome to Callin.io
 
 This is your **configuration center** for managing your AI calling platform.
