Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,5 +1,5 @@
 ---
-mode: "custom"
+mode: "wide"
 ---
 
 <div style={{ display:"flex",flexDirection:"column",justifyContent:"center",alignItems:"center",paddingTop:"4rem",textAlign:"center",minHeight:"70vh" }}>
