--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,19 +1,20 @@
 ---
-mode: "wide"
+title: ""
+description: "Configure agents, numbers, actions, and everything you need to run your AI calling system."
 ---
 
-<div style={{ display:"flex",flexDirection:"column",justifyContent:"center",alignItems:"center",paddingTop:"4rem",textAlign:"center",minHeight:"70vh" }}>
-# Welcome to Callin.io
+<h1 style={{ textAlign: "center", fontSize: "2rem", fontWeight: "bold", marginBottom: "1rem" }}>
+Welcome to Callin.io
+</h1>
 
-This is your **configuration center** for managing your AI calling platform.
+<div style={{ textAlign: "center", marginTop: "1rem", marginBottom: "2rem", maxWidth: "800px", marginLeft: "auto", marginRight: "auto", lineHeight: "1.8" }}>
 
-Explore the sections from the left sidebar to:
+<p style={{ fontSize: "1.1rem" }}>
+You're in the <strong>Callin.io Configuration Center</strong>, where you can set up everything related to your AI calling experience. Use the left-hand menu to access each configuration step — from AI agents to virtual numbers, analytics, and more.
+</p>
 
-- Set up and customize your **AI agents**
-- Configure **virtual numbers** for your campaigns
-- Connect with analytics and integrations
-- Fine-tune behavior, voices, and variables
-
-Everything you need to launch and scale with Callin.io — in one place.
+<p style={{ fontSize: "1.1rem", marginTop: "1rem" }}>
+Each section is designed to guide you clearly and efficiently through the setup process. No guesswork, just results.
+</p>
 
 </div>
