Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,20 +1,23 @@
 ---
-title: ""
-description: "Configure agents, numbers, actions, and everything you need to run your AI calling system."
+mode: "custom"
 ---
 
-<h1 style={{ textAlign: "center", fontSize: "2rem", fontWeight: "bold", marginBottom: "1rem" }}>
+<h1 style={{ textAlign:"center",fontSize:"2rem",fontWeight:"bold",marginBottom:"1rem" }}>
 Welcome to Callin.io
+
 </h1>
 
-<div style={{ textAlign: "center", marginTop: "1rem", marginBottom: "2rem", maxWidth: "800px", marginLeft: "auto", marginRight: "auto", lineHeight: "1.8" }}>
+<div style={{ textAlign:"center",marginTop:"1rem",marginBottom:"2rem",maxWidth:"800px",marginLeft:"auto",marginRight:"auto",lineHeight:"1.8" }}>
+<p style={{ fontSize:"1.1rem" }}>
+You're in the Callin.io Configuration Center
 
-<p style={{ fontSize: "1.1rem" }}>
-You're in the <strong>Callin.io Configuration Center</strong>, where you can set up everything related to your AI calling experience. Use the left-hand menu to access each configuration step — from AI agents to virtual numbers, analytics, and more.
+, where you can set up everything related to your AI calling experience. Use the left-hand menu to access each configuration step — from AI agents to virtual numbers, analytics, and more.
+
 </p>
 
-<p style={{ fontSize: "1.1rem", marginTop: "1rem" }}>
+<p style={{ fontSize:"1.1rem",marginTop:"1rem" }}>
 Each section is designed to guide you clearly and efficiently through the setup process. No guesswork, just results.
+
 </p>
 
 </div>
