Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,23 +1,4 @@
 ---
-mode: "custom"
+title: "Welcome to Callin.io"
+description: "You're in the Callin.io Configuration Center, where you can set up everything related to your AI calling experience. Use the left-hand menu to access each configuration step — from AI agents to virtual numbers, analytics, and more. Each section is designed to guide you clearly and efficiently through the setup process. No guesswork, just results."
 ---
-
-<h1 style={{ textAlign:"center",fontSize:"2rem",fontWeight:"bold",marginBottom:"1rem" }}>
-Welcome to Callin.io
-
-</h1>
-
-<div style={{ textAlign:"center",marginTop:"1rem",marginBottom:"2rem",maxWidth:"800px",marginLeft:"auto",marginRight:"auto",lineHeight:"1.8" }}>
-<p style={{ fontSize:"1.1rem" }}>
-You're in the Callin.io Configuration Center
-
-, where you can set up everything related to your AI calling experience. Use the left-hand menu to access each configuration step — from AI agents to virtual numbers, analytics, and more.
-
-</p>
-
-<p style={{ fontSize:"1.1rem",marginTop:"1rem" }}>
-Each section is designed to guide you clearly and efficiently through the setup process. No guesswork, just results.
-
-</p>
-
-</div>
