Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,4 +1,5 @@
 ---
-title: "Welcome to Callin.io"
+title: Welcome
 description: "You're in the Callin.io Configuration Center, where you can set up everything related to your AI calling experience. Use the left-hand menu to access each configuration step — from AI agents to virtual numbers, analytics, and more. Each section is designed to guide you clearly and efficiently through the setup process. No guesswork, just results."
 ---
+
