Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,5 +1,10 @@
 ---
 title: Welcome
-description: "You're in the Callin.io Configuration Center, where you can set up everything related to your AI calling experience. Use the left-hand menu to access each configuration step — from AI agents to virtual numbers, analytics, and more. Each section is designed to guide you clearly and efficiently through the setup process. No guesswork, just results."
+description: "From here you’ll learn how to configure your AI calling platform, access your agent settings, and manage your numbers and analytics."
 ---
+
+You're in the **Callin.io Configuration Center**, your one-stop dashboard to manage everything related to your AI calling platform. This includes agent creation and customization, virtual number setup, behavior and action design, and integration with external tools like calendars and analytics platforms.
+
+Each section in the menu to your left is tailored to walk you through a specific part of the configuration, helping you get your system running quickly and smoothly. Whether you’re setting up your first campaign or scaling your operations, you’ll find the tools you need right here — no fluff, just function.
+
 
