Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: Welcome to Documentation Callin.io
-description: "From here you’ll learn how to configure your AI calling platform, access your agent settings, and manage your numbers and analytics."
+mode: "custom"
+title: "Welcome to the Callin.io Documentation"
 ---
 
 You're in the **Callin.io Configuration Center**, your one-stop dashboard to manage everything related to your AI calling platform. This includes agent creation and customization, virtual number setup, behavior and action design, and integration with external tools like calendars and analytics platforms.
