--- a/Create-AI-Agent/Call-Actions.mdx
+++ b/Create-AI-Agent/Call-Actions.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+description: "Description of your new file."
+title: "Set Up Call Actions"
 ---
-
