Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/introduction.mdx
+++ b/Create-AI-Agent/introduction.mdx
@@ -1,102 +1,8 @@
 ---
-title: "How to Create Your AI Agent"
-description: "This guide walks you through the steps to create an AI agent in Callin.io, including all configurable options and features."
+mode: "custom"
+title: "Welcome to the Callin.io Documentation"
 ---
 
-## Step 1: Open the AI Agents module
+You're in the **Callin.io Configuration Center**, your one-stop dashboard to manage everything related to your AI calling platform. This includes agent creation and customization, virtual number setup, behavior and action design, and integration with external tools like calendars and analytics platforms.
 
-From the left sidebar, click on **AI Agents** and then on the **Create Agent** button to begin.
-
-![AI Agent creation screen](../images/img%201.png)
-
-## Step 2: Fill in basic information
-
-Complete the following fields:
-
-- **Agent Title**: A name to identify the agent.
-- **Agent Type**:
-  - `Inbound`: Handles incoming calls.
-  - `Outbound`: Makes automated outbound calls.
-- **Maximum Call Duration (Minutes)**: Maximum length of each call.
-- **Language**: The primary language the agent will use.
-
-![Agent form - basic info](../images/img%202.png)
-
-## Step 3: Choose a voice
-
-In this step, you can select the voice your agent will use based on the previously selected language.
-
-Each voice includes a short description (e.g., “Friendly conversational voice”, “American accent”) and a preview button that allows you to listen before making your choice.
-
-Make sure to select a voice that fits the tone and purpose of your calls.
-
-![Voice selection screen](../images/img%203.png)
-
-
-## Step 4: Advanced settings
-
-This section allows you to configure optional features that improve call control and customization:
-
-- **Machine Answering Detection**: Automatically detects voicemail and auto-responders.
-- **Office Ambience Sound**: Adds simulated background noise to make the agent sound like it's in a real office.
-- **Retry Settings**: Set the time interval between retries if a call is not answered (e.g., between 0 and 30 seconds).
-- **Webhook URL**: Enter a URL to receive real-time events such as call results or transcripts.
-
-![Advanced settings screen](../images/img%204.png)
-
-
-## Step 5: Agent behavior and integrations
-
-This section defines how your agent will behave and whether it will use external services:
-
-- **Agent Type**:
-  - `Standard Agent`: Uses predefined prompts and categories. Ideal for simple interaction flows.
-  - `Knowledge-Based Agent`: Leverages uploaded documents as a knowledge base for smarter responses.
-
-- **Google Calendar Integration**: Connect a Google account to enable real-time appointment scheduling directly from calls.
-
-![Agent behavior and integrations](../images/img%205.png)
-
-## Step 6: Define actions and messages
-
-In this section, you configure the **Call to Action** and the **Greeting Message** that the AI agent will use.
-
-- **Call to Action**: Choose optional actions the AI can take at the end of a call. Available options include:
-  - **Schedule Appointment** – Allows the AI to book appointments directly on your calendar.
-  - **Transfer to Human Agent** – Enables the AI to transfer the call to a human operator.
-
-  These actions can be selected from the **Select actions** dropdown and are customizable based on your needs.
-
-- **Greeting Message**: This is the first thing your AI agent says when the call begins. You can personalize this message using dynamic variables like `[Agent Name]`, `[Store Name]`, and others.
-
-![AI Agent action and greeting message](../images/img%206.png)
-
-## Step 7: Define category and system prompt
-
-In this step, you will define the **Category** of your agent and write the **System Prompt**, which guides the AI’s overall behavior.
-
-- **Category**: Choose the domain your agent will operate in (e.g., E-commerce, Financial services, Home services).
-- **System Prompt**: Write a high-level instruction that the AI will follow during interactions.
-
-![Agent category and prompt configuration](../images/img%207.png)
-
-## Step 8: Use dynamic variables
-
-To personalize the AI agent's responses, you can use dynamic variables that will be replaced automatically during the conversation. These variables allow your AI agent to address users more naturally and adapt its messages in real time.
-
-The available dynamic variables are:
-
-- `[agent_name]`: Name of the AI Agent  
-- `[appointment_date]`: Date and time of the appointment  
-- `[appointment_type]`: Type of appointment  
-- `[company_name]`: Your company name  
-- `[contact_name]`: Name of the person being called  
-- `[email]`: Email of the customer  
-- `[first_name]`: First name of customer  
-- `[name]`: Full name of the customer  
-- `[product_name]`: Name of the product  
-- `[time_of_day]`: Morning, Afternoon or Evening based on the local time
-
-These variables can be inserted into prompts or greeting messages to create a more personalized and effective user experience.
-
-![Dynamic variables screen](../images/img%208.png)
+Each section in the menu to your left is tailored to walk you through a specific part of the configuration, helping you get your system running quickly and smoothly. Whether you’re setting up your first campaign or scaling your operations, you’ll find the tools you need right here — no fluff, just function.
