Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/introduction.mdx
+++ b/Create-AI-Agent/introduction.mdx
@@ -7,7 +7,12 @@ description: "This guide walks you through the steps to create an AI agent in Ca
 
 From the left sidebar, click on **AI Agents** and then on the **Create Agent** button to begin.
 
-![AI Agent creation screen](../images/img%201.png)
+<img
+  src="/gifs/cag1.gif"
+  alt="Step 1 - Open AI Agents"
+  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1rem' }}
+/>
+
 
 ## Step 2: Fill in basic information
 
