Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/introduction.mdx
+++ b/Create-AI-Agent/introduction.mdx
@@ -25,7 +25,11 @@ Complete the following fields:
 - **Maximum Call Duration (Minutes)**: Maximum length of each call.
 - **Language**: The primary language the agent will use.
 
-![Agent form - basic info](../images/img%202.png)
+<img
+  src="/gifs/cag2.gif"
+  alt="Step 2 - Fill in agent information"
+  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1.5rem' }}
+/>
 
 ## Step 3: Choose a voice
 
@@ -35,7 +39,11 @@ Each voice includes a short description (e.g., â€œFriendly conversational voiceâ
 
 Make sure to select a voice that fits the tone and purpose of your calls.
 
-![Voice selection screen](../images/img%203.png)
+<img
+  src="/gifs/cag3.gif"
+  alt="Step 3 - Choose a voice"
+  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1.5rem' }}
+/>
 
 
 ## Step 4: Advanced settings
@@ -47,7 +55,11 @@ This section allows you to configure optional features that improve call control
 - **Retry Settings**: Set the time interval between retries if a call is not answered (e.g., between 0 and 30 seconds).
 - **Webhook URL**: Enter a URL to receive real-time events such as call results or transcripts.
 
-![Advanced settings screen](../images/img%204.png)
+<img
+  src="/gifs/cag4.gif"
+  alt="Step 4 - Advanced settings"
+  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1.5rem' }}
+/>
 
 
 ## Step 5: Agent behavior and integrations
@@ -60,7 +72,11 @@ This section defines how your agent will behave and whether it will use external
 
 - **Google Calendar Integration**: Connect a Google account to enable real-time appointment scheduling directly from calls.
 
-![Agent behavior and integrations](../images/img%205.png)
+<img
+  src="/gifs/cag8.gif"
+  alt="Step 5 - Agent behavior and integrations"
+  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1.5rem' }}
+/>
 
 ## Step 6: Define actions and messages
 
@@ -74,7 +90,11 @@ In this section, you configure the **Call to Action** and the **Greeting Message
 
 - **Greeting Message**: This is the first thing your AI agent says when the call begins. You can personalize this message using dynamic variables like `[Agent Name]`, `[Store Name]`, and others.
 
-![AI Agent action and greeting message](../images/img%206.png)
+<img
+  src="/gifs/cag5.gif"
+  alt="Step 5 - Agent behavior and integrations"
+  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1.5rem' }}
+/>
 
 ## Step 7: Define category and system prompt
 
@@ -83,7 +103,11 @@ In this step, you will define the **Category** of your agent and write the **Sys
 - **Category**: Choose the domain your agent will operate in (e.g., E-commerce, Financial services, Home services).
 - **System Prompt**: Write a high-level instruction that the AI will follow during interactions.
 
-![Agent category and prompt configuration](../images/img%207.png)
+<img
+  src="/gifs/cag8.gif"
+  alt="Step 5 - Agent behavior and integrations"
+  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1.5rem' }}
+/>
 
 ## Step 8: Use dynamic variables
 
@@ -104,4 +128,8 @@ The available dynamic variables are:
 
 These variables can be inserted into prompts or greeting messages to create a more personalized and effective user experience.
 
-![Dynamic variables screen](../images/img%208.png)
+<img
+  src="/gifs/cag7.gif"
+  alt="Step 8 - Final review"
+  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1.5rem' }}
+/>
