Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/Configure-Numbers.mdx
+++ b/Create-AI-Agent/Configure-Numbers.mdx
@@ -1,4 +1,37 @@
 ---
-description: "Description of your new file."
 title: "Configure Your Numbers"
+description: "Set up or import phone numbers to connect with your AI agents in Callin.io."
 ---
+
+## Configure Your Numbers
+
+In this section, you’ll learn how to **set up** or **import** phone numbers into your Callin.io platform. These numbers are essential for enabling outbound and inbound call capabilities for your AI agents.
+
+### Option 1: Purchase a Number
+
+1. From the left sidebar, go to **Numbers**.
+2. Click the **Purchase Number** button at the top.
+3. A popup will appear where you can:
+   - Select your **country**.
+   - Choose the number type: **Local Number** or **Toll-Free Number**.
+   - Optionally, specify an **area code**.
+4. Click **Search Available Numbers**.
+5. Select a number and click **Purchase Selected Number**.
+
+💡 Monthly pricing is shown before confirming your purchase.
+
+### Option 2: Import from Twilio
+
+1. Click the **Import from Twilio** button.
+2. Enter your **Twilio Account SID** and **Twilio Auth Token**.
+3. Click **Search Twilio Numbers** to retrieve and import your existing numbers.
+
+Once added, the numbers will be available for assignment to your agents and campaigns.
+
+<img
+  src="/gifs/cyng1.gif"
+  alt="Configure Numbers Flow"
+  style={{ borderRadius: '12px', maxWidth: '100%', marginTop: '1rem', marginBottom: '1rem' }}
+/>
+
+
