Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/Call-Actions.mdx
+++ b/Create-AI-Agent/Call-Actions.mdx
@@ -1,4 +1,22 @@
 ---
-description: "Description of your new file."
-title: "Set Up Call Actions"
+description: "description: "In this section, you’ll find a detailed overview of all inbound and outbound calls made through your Callin.io AI agents."
+title: "View and Manage Your Call History"
 ---
+
+The **Call History** dashboard gives you complete visibility into your system's activity, including:
+
+- **Filters** to narrow down results by date (e.g. last 7 days), direction (inbound/outbound), or specific numbers.
+- **Search functionality** to instantly locate a call by number, agent name, or other details.
+- **Export option** to download the call log as a CSV file, ideal for backups or external analysis.
+
+Each call entry includes:
+
+- **Date & Time** of the interaction.
+- **Direction** (inbound or outbound).
+- **Phone Number** and **Caller Name** involved.
+- **Call Duration**, **Cost**, and **Assigned AI Agent**.
+- Any linked **appointment** or **automated process** triggered during the call.
+
+> 📎 This log is essential for performance analysis, auditing, and troubleshooting. It provides your team with accurate, real-time records of every customer interaction made through the platform.
+
+![Call History Example](/gifs/callg1.gif)
