Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/Call-Actions.mdx
+++ b/Create-AI-Agent/Call-Actions.mdx
@@ -1,8 +1,7 @@
 ---
-description: "description: "In this section, you’ll find a detailed overview of all inbound and outbound calls made through your Callin.io AI agents."
 title: "View and Manage Your Call History"
+description: "In this section, you’ll find a detailed overview of all inbound and outbound calls made through your Callin.io AI agents."
 ---
-
 
 The **Call History** dashboard gives you complete visibility into your system's activity, including:
 
@@ -18,6 +17,7 @@ Each call entry includes:
 - **Call Duration**, **Cost**, and **Assigned AI Agent**.
 - Any linked **appointment** or **automated process** triggered during the call.
 
-> 📎 This log is essential for performance analysis, auditing, and troubleshooting. It provides your team with accurate, real-time records of every customer interaction made through the platform.
+  This log is essential for performance analysis, auditing, and troubleshooting.  
+  It provides your team with accurate, real-time records of every customer interaction made through the platform.
 
-![Call History Example](/gifs/callg1.gif)
+  ![Call History Overview](/gifs/callg1.gif)
