Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/Voice-Greetings.mdx
+++ b/Create-AI-Agent/Voice-Greetings.mdx
@@ -1,4 +1,28 @@
 ---
-description: "Description of your new file."
 title: "Customize Voice & Greetings"
+description: "Learn how to record or upload a custom voice sample for your AI agent. This guide walks you through the voice cloning process in Callin.io."
 ---
+
+The **Voice Cloning** interface allows you to personalize your AI agent’s voice by either recording a new voice or uploading an audio file.
+
+### Voice Customization Options
+
+You have two options:
+
+- **Start Recording**: Record your voice directly from the browser.
+- **Upload Audio**: Select a pre-recorded audio file in supported formats.
+
+Both methods require a sample of at least **30 seconds** to ensure accurate cloning.
+
+### Recording Guidelines
+
+To achieve the best results:
+
+- Record in a **quiet environment** with minimal background noise.
+- **Speak clearly** and at a natural pace.
+- Provide at least **30 seconds** of uninterrupted speech.
+- Avoid background music or **multiple voices** in the sample.
+
+This process is crucial to creating a realistic and personalized AI voice that reflects your brand’s tone.
+
+![Voice Cloning Interface](/gifs/voiceg1.gif)
