Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/Analytics-Integrations.mdx
+++ b/Create-AI-Agent/Analytics-Integrations.mdx
@@ -1,4 +1,26 @@
 ---
-description: "Description of your new file."
-title: "Analytics and Integrations"
+title: "Analyze Your Platform's Performance"
+description: "Get insights into your AI agent performance, call activity, and usage patterns with the built-in analytics dashboard."
 ---
+
+The **Analytics** dashboard provides a comprehensive overview of your platform’s operational performance. It offers detailed visual insights that help you track usage, identify trends, and optimize your call center strategy. Here's what you'll find:
+
+### 📊 Summary Cards
+
+- **Total Appointments**: Track how many calls were scheduled over a period.
+- **Average Call Duration**: Monitor how long your interactions last on average.
+- **Total Calls**: Understand your platform's overall usage volume.
+- **Conversion Rate**: Measure how many calls successfully lead to the desired outcome.
+
+These metrics are updated in real-time and compare data against the previous week to highlight growth or decline.
+
+### 📈 Visual Insights
+
+- **Credit Usage Chart**: Displays credit consumption trends by date.
+- **Appointments Today**: Shows scheduled vs. completed calls in a bar chart.
+- **Call Outcomes**: A pie chart breakdown of successful, failed, unanswered, or voicemail calls.
+- **Key Metrics**: Includes important KPIs like response rate, customer satisfaction, connection rate, and AI accuracy score.
+
+This dashboard empowers your team to make informed, data-driven decisions and improve service quality continuously.
+
+![Analytics Overview](../gifs/analiticsg1.gif)
