Documentation edits made through Mintlify web editor

--- a/Create-AI-Agent/Analytics-Integrations.mdx
+++ b/Create-AI-Agent/Analytics-Integrations.mdx
@@ -23,4 +23,8 @@ These metrics are updated in real-time and compare data against the previous wee
 
 This dashboard empowers your team to make informed, data-driven decisions and improve service quality continuously.
 
-![Analytics Overview](../gifs/analiticsg1.gif)
+   <img
+   src="/gifs/analiticsg1.gif"
+   alt="Step 1 - Open AI Agents"
+   style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1rem' }}
+   />
