--- a/Create-AI-Agent/Call-Actions.mdx
+++ b/Create-AI-Agent/Call-Actions.mdx
@@ -20,4 +20,8 @@ Each call entry includes:
   This log is essential for performance analysis, auditing, and troubleshooting.  
   It provides your team with accurate, real-time records of every customer interaction made through the platform.
 
-  ![Call History Overview](/gifs/callg1.gif)
+  <img
+  src="/gifs/callg1.gif"
+  alt="Step 1 - Open AI Agents"
+  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1rem' }}
+  />
