--- a/Create-AI-Agent/Voice-Greetings.mdx
+++ b/Create-AI-Agent/Voice-Greetings.mdx
@@ -25,4 +25,8 @@ To achieve the best results:
 
 This process is crucial to creating a realistic and personalized AI voice that reflects your brand’s tone.
 
-![Voice Cloning Interface](/gifs/voiceg1.gif)
+<img
+  src="/gifs/voiceg1.gif"
+  alt="Step 1 - Open AI Agents"
+  style={{ borderRadius: '12px', maxWidth: '100%', marginBottom: '1rem' }}
+/>
